#4 Refactoring Front-End to VueJS * POST /spent with empty body returns all expenditures * Allow CORS from any origin, method and header in development environment * Adding default server name and address for front-end in development environment * Send a JSON from the filter bar to get filtered expenditures from the back end * Changing from ASP.Net templates to Vue * Adding english and french translations

--- a/SpentCalculator/VueJS/src/translation/en.json
+++ b/SpentCalculator/VueJS/src/translation/en.json
@@ -1,4 +1,10 @@
 {
+  "app": {
+    "title": "Expenditures calculator"
+  },
+  "menu": {
+    "filter": "Filter"
+  },
   "navigation": {
     "home": "Home",
     "spents": "Expenditures",
@@ -8,6 +14,6 @@
   "expenditure": {
     "name": "Name",
     "datetime": "Date",
-    "amount": "Amount ($)"
+    "amount": "Amount ({0})"
   }
 }
